styles/main.css
* {
    box-sizing:border-box;
}

:root{
    --win-color: #1b7635;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    height: 100vh;
    margin: 0;
    /* padding-top: 20vh; */
    background-color: #323041;
}

header {
    position: fixed;
    align-items: center;
    top: 0;
    width: 100%;
    /* background-color: #cfb4b4;* */
    background-color: #b55f52;
    text-align: center;
    max-height: 20vh;
    color:blanchedalmond;
}

main {
    margin-top: 150px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80vw;
}

h1.main-title {
    font-family: 'Monoton', cursive;
    font-weight: 400;
    font-size: 30pt;
    margin: auto;
    margin-top: 0;
    margin-bottom: 0;
    min-width: 375px;
}

header h2{
    margin-top: 2vh;
}

#board {
    background-color: darkgrey;
    display: grid;
    grid-template-rows: repeat(3, 20vmin);
    grid-template-columns: repeat(3, 20vmin);
    border-radius: 5%;
}

#board>div {
    background-color: lightgrey;
    margin: 1vmin;
    border-radius: 25%;
    border: 1vmin solid whitesmoke;
    ;
}

#board>div:hover:not(.filled):not(.disabled) {
    background-color: whitesmoke;
    background-image: radial-gradient(circle at center, whitesmoke, #c7c7c7);
    cursor: pointer;
}

.disabled:hover, #board>div.filled:hover, #board>div.disabled:hover {
    cursor: not-allowed;
}

#board>div:active:not(.filled):not(.disabled) {
    background-color: #dddddd;
    background-image: none;
}
.icons {
    background-color: #cfb4b4;
}
.icons>div {
    border: solid rgba(0, 0, 0, 0);
    border-radius: 10%;
    padding: 2px;
    display: inline-block;
}

.icons>div:hover:not(#status) {
    background-color: darksalmon;
    background-image: radial-gradient(circle at center, darksalmon, #b55f52);
    border: solid;
}


#sound-off:hover line {
    stroke: whitesmoke;
}

#sound-off:active line {
    stroke: #cfb4b4;
}

.icons>div:active:not(#status) {
    /* padding: 1px; */
    background-color: #93554c;
    background-image: none;
}

#game-logo{
    display: none;
}

#big-logo{
    display: none;

}


footer{
    margin-top: 20px;
    color: #dddddd;
    text-align: center;
}

footer a{
    color: #cfb4b4;
}

#status{
    display: inline-block;
    position: fixed;
    right: 1vmin;
    text-align: right;
    color: black;
    width: 200px;
    max-height: 3vmax;
    margin-top:1vmax;
    flex-wrap: wrap;
}

#status-text{
    font-family: sans-serif;
}

@media screen and (max-width:355px){
    .main-title{
        display: none;
    }
    #big-logo{
        display: block;
    }
    #big-logo img{
        width: 50px;
    }
    #status{
        display: block;
        background-color: #cfb4b4;
        border-radius: 0;
        padding: 0;
        margin-top: 0;
        width: 100%;
        right:0;
        padding-right: 10px;
    }
}


@media screen and (max-width: 500px) and (min-height:450px) {
    main {

        display: flex;
        justify-content: space-evenly;
        align-items: center;
        min-width: 90vw;
    }

    /* #board {
        min-width: 90%;
        height: 90vmin;
        align-items: center;
        justify-content: center;
        display: grid;
        grid-template-rows: repeat(3, 30vmin);
        grid-template-columns: repeat(3, 30vmin);
        border-radius: 5%;

    } */
    #board{
        min-width: 90%;
        grid-template-rows: repeat(3, 30vmin);
        grid-template-columns: repeat(3, 30vmin);
    }
} 


@media screen and (max-height:675px) and (orientation:landscape) {
    body {
        padding-top: 10vh;
    }

    h1.main-title {
        font-size: 25pt;
        max-height: fit-content;
    }

    main {
        margin-top: 25vh;
    }

    header h2{
        margin-top: auto;
    }

} 

@media screen and (max-height:400px) {
    body {
        padding-top: 10vh;
    }

    h1.main-title {
        font-size: 25pt;
        max-height: fit-content;
        display: none;
    }

    main {
        margin-top: 10vh;
    }

    header h2{
        margin-top: auto;
    }

    #game-logo{
        display: block;
        float: left;
        position: fixed;
    }
    #big-logo{
        display: none;
    }
    #game-logo > img{
        height: 3vmax;;
    }
    
}

@media screen and (min-height:1200px) {
    main{
        margin-top: 10px;
    }
}

/* @media  screen and (min-width:322px) and (min-height:400px) {
    #big-logo{
        display: block;
        position: absolute;
        float: left;
        margin: 1.5vmax 0 0 0.5vmax;
    }
    #big-logo img {
        width: 5vmax;
    }    
} */

